# HW_24_1

./: .env.sample  Dockerfile  coverage.txt  docker-compose.yaml  pyproject.toml  test_import.py
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_preview.py  0002_initial.py  0003_subscription.py  0004_alter_lesson_video_link.py  0005_alter_course_preview.py  0006_alter_course_preview_alter_lesson_preview.py  0007_alter_course_preview_alter_lesson_preview.py  0008_alter_course_preview_alter_lesson_preview.py  0009_remove_lesson_preview.py  0010_lesson_preview.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: create_users.py  fill_db.py  fill_payment.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
